Added image to email bar

--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,7 @@ section{
 }
 
 .subscribe{
-	background-image: url(../images/11.jpg);
+	background-image: url(../images/mountains.jpg);
 }
 .subscribe .pwj-btn{
 	margin-bottom: 0;
