--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,7 @@ section{
 .about img{
 	margin: 30px auto;
 	display: block;
+
 }
 .about span{
 	font-family: 'Raleway';
@@ -396,7 +397,7 @@ section{
 	line-height: 200%;
 }
 .expert .bg-img{
-	background-image: url(../images/imagetest.jpg);
+	background-image: url(../images/.jpg);
 	background-position-x: 85%;
 	height: 100%;
 }
